Fix bugg access to file app1_data.json

--- a/videotheque-api/Dockerfile
+++ b/videotheque-api/Dockerfile
@@ -13,10 +13,10 @@ COPY requirements.txt /app/
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copiez le reste de l'application
-COPY app2/* /app
+COPY . /app
 
 # Exposez le port sur lequel l'application Flask écoute
 EXPOSE 8000
 
 # Commande par défaut pour lancer l'application Flask
-CMD ["python3", "app.py"]
+CMD ["python3", "app2/app.py"]
