--- a/videotheque/Dockerfile
+++ b/videotheque/Dockerfile
@@ -1,5 +1,6 @@
 # Utilisez une image de base Ubuntu 20.04
 FROM ubuntu:20.04
+FROM python:3.9
 
 # Installez Python et pip
 RUN apt-get update && \
@@ -13,10 +14,9 @@ COPY requirements.txt /app/
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copiez le reste de l'application
-COPY app1/* /app/
-
+COPY . /app/
 # Exposez le port sur lequel l'application Flask écoute
 EXPOSE 5000
 
 # Commande par défaut pour lancer l'application Flask
-CMD ["python3", "app.py"]
+CMD ["python3", "app1/app.py"]
