--- a/videotheque-api/Dockerfile
+++ b/videotheque-api/Dockerfile
@@ -1,5 +1,3 @@
-# Utilisez une image de base Ubuntu 20.04
-FROM ubuntu:20.04
 FROM python:3.9
 
 # Installez Python et pip
@@ -11,7 +9,7 @@ WORKDIR /app
 
 # Copiez le fichier requirements.txt et installez les dépendances
 COPY requirements.txt /app/
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiez le reste de l'application
 COPY . /app
